force-app/main/default/objects/RichTax__c/RichTax__c.object-meta.xml
<CustomObject>
    <label>RichTax</label>
    <pluralLabel>RichTaxs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>RichTax Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>