force-app/main/default/objects/RichTax__c/fields/RangeLimitMin__c.field-meta.xml
<CustomField>
    <fullName>RangeLimitMin__c</fullName>
    <label>RangeLimitMin</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>