force-app/main/default/objects/RichTax__c/fields/Tax_income__c.field-meta.xml
<CustomField>
    <fullName>Tax_income__c</fullName>
    <label>Tax income</label>
    <type>Lookup</type>
    <referenceTo>TaxIncome__c</referenceTo>
    <relationshipName>RichTax_Tax_income</relationshipName>
</CustomField>